RESOLVED FIXED261244
[css-grid] grid should not always put first and last baseline aligned items into different alignment contexts
https://bugs.webkit.org/show_bug.cgi?id=261244
Summary [css-grid] grid should not always put first and last baseline aligned items i...
Sammy Gill
Reported 2023-09-06 17:01:27 PDT
Currently grid computes the alignment context for first/last baseline aligned items as follows: auto spanForBaselineAlignment = align == ItemPosition::Baseline ? span.startLine() : span.endLine() This is not correct because items that are in the same track with different baseline alignments are technically in the same alignment context. As a result, items in the same alignment context can be in the same baseline sharing group is their baseline alignment preferences are compatible https://drafts.csswg.org/css-align-3/#baseline-terms
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-06 17:01:42 PDT
Sammy Gill
Comment 2 2023-09-06 17:17:31 PDT
EWS
Comment 3 2023-09-12 15:13:30 PDT
Committed 267922@main (caab01d5e748): <https://commits.webkit.org/267922@main> Reviewed commits have been landed. Closing PR #17517 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.