Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp
@@ -961,6 +961,14 @@ bool GridTrackSizingAlgorithm::participateInBaselineAlignment(const RenderBox& c
     return baselineAxis == GridColumnAxis ? m_columnBaselineItemsMap.get(&child) : m_rowBaselineItemsMap.get(&child);
 }
 
+static unsigned alignmentContextForBaselineAlignment(const GridSpan& span, const ItemPosition& alignment)
+{
+    ASSERT(alignment == ItemPosition::Baseline || alignment == ItemPosition::LastBaseline);
+    if (alignment == ItemPosition::Baseline)
+        return span.startLine();
+    return span.endLine() - 1;
+}
+
 void GridTrackSizingAlgorithm::updateBaselineAlignmentContext(const RenderBox& child, GridAxis baselineAxis)
 {
     ASSERT(wasSetup());
@@ -968,8 +976,8 @@ void GridTrackSizingAlgorithm::updateBaselineAlignmentContext(const RenderBox& c
 
     ItemPosition align = m_renderGrid->selfAlignmentForChild(baselineAxis, child).position();
     const auto& span = m_renderGrid->gridSpanForChild(child, gridDirectionForAxis(baselineAxis));
-    auto spanForBaselineAlignment = align == ItemPosition::Baseline ? span.startLine() : span.endLine();
-    m_baselineAlignment.updateBaselineAlignmentContext(align, spanForBaselineAlignment, child, baselineAxis);
+    auto alignmentContext = alignmentContextForBaselineAlignment(span, align);
+    m_baselineAlignment.updateBaselineAlignmentContext(align, alignmentContext, child, baselineAxis);
 }
 
 LayoutUnit GridTrackSizingAlgorithm::baselineOffsetForChild(const RenderBox& child, GridAxis baselineAxis) const
@@ -984,8 +992,8 @@ LayoutUnit GridTrackSizingAlgorithm::baselineOffsetForChild(const RenderBox& chi
 
     ItemPosition align = m_renderGrid->selfAlignmentForChild(baselineAxis, child).position();
     const auto& span = m_renderGrid->gridSpanForChild(child, gridDirectionForAxis(baselineAxis));
-    auto spanForBaselineAlignment = align == ItemPosition::Baseline ? span.startLine() : span.endLine();
-    return m_baselineAlignment.baselineOffsetForChild(align, spanForBaselineAlignment, child, baselineAxis);
+    auto alignmentContext = alignmentContextForBaselineAlignment(span, align);
+    return m_baselineAlignment.baselineOffsetForChild(align, alignmentContext, child, baselineAxis);
 }
 
 void GridTrackSizingAlgorithm::clearBaselineItemsCache()
